0.0.7 (preview 7, 1.12.2)
Added: New main parts: obsidian, netherrack, and terracotta
Changed: Improvements to how gear part data is passed around, which seems to improve frame rate (FPS)
Changed: Gear can no longer be repaired with lower-tier materials
Fixed: Armor breaking permanently (hopefully)
Fixed: A rare(?) crash with hammers
Fixed: JEI should now recognize the crafting station as a crafting table

0.0.6 (preview 6, 1.12.2)
Added: Part analyzer, basically the same as the material grade from Silent's Gems
Added: Tools and armor that have ungraded parts will be assigned random grades. The grades selected have a lower average and lower maximum than those graded by the analyzer.
Changed: The lowest material grades now reduce stats slightly, with grade C providing no bonuses. Higher grade bonuses increased.

0.0.5 (preview 5, 1.12.2)
Added: Blueprints/templates now display an outline of the item they craft if you are holding shift
Added: Template textures
Added: More advancements! And localizations for all of them
Changed: Blueprints/templates have their own items now (old ones will disappear, sorry)
Changed: Tip upgrades now have their own items (same story as above)
Fixed: Many(?) missing recipes

0.0.4 (preview 4, 1.12.2)
Added: Quick repair recipe, which replaces decorating
Changed: Block placing tools now require sneaking (fixes placing blocks when click on blocks with GUIs and such)
Changed: Crafting materials (upgrade base, rods, sinew) have individual items now, existing ones will disappear
Fixed: Dagger localizations
Fixed: Command usage text

0.0.3 (preview 3, 1.12.2)
Added: User-defined materials are now working!
Added: Subcommand to repair held gear
Fixed: Example recipes done right, hopefully
Various minor fixes

0.0.2 (preview 2, 1.12.2)
Added: Missing blueprint recipes for daggers and sickles